# M3Stuart_D1Mini_IDF

./: .gitignore  build.sh  env.sh  flash.sh  monitor.sh  sdkconfig.esp32
components/ESP32Servo/: CMakeLists.txt
main/: CMakeLists.txt  DFMiniMp3.h  Mp3Notify.h  PadController.cpp  PadController.h  TrackController.cpp  TrackController.h  TurretController.cpp  TurretController.h  arduino_main.cpp
